Fix button breaks in layout

--- a/css/main.css
+++ b/css/main.css
@@ -706,14 +706,17 @@ main {
 }
 
 .image-container {
-  background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.65)), url("../img/stavanger.jpg") no-repeat;
-  background-attachment: fixed;
+  background: linear-gradient(rgba(0, 0, 0, 0.45), rgba(0, 0, 0, 0.55)), url("../img/stavanger.jpg") no-repeat;
   background-position: center;
   background-size: cover;
   border-radius: 4px;
   color: #fff;
-  padding: 5%;
   overflow: hidden;
+}
+@media (min-width: 768px) {
+  .image-container {
+    padding: 2.5% 0;
+  }
 }
 
 .about-content {
@@ -882,7 +885,7 @@ main {
 .portfolio__link {
   background: rgba(180, 200, 144, 0.85);
   color: #fff;
-  width: 47.99%;
+  width: 46.99%;
   font-size: 1em;
   font-weight: 700;
   display: inline-block;
@@ -891,15 +894,20 @@ main {
   padding: 10px 0;
   border: 2px solid #fff;
   border-radius: 0.5em;
-  margin: 0 10px 0 0;
+  margin: 0;
   margin-top: auto;
   transition: background 0.5s ease-out 0.2s;
+}
+@media (min-width: 1150px) {
+  .portfolio__link {
+    width: 47.99%;
+  }
 }
 .portfolio__link:hover {
   background: #99b898;
 }
 .portfolio__link + .portfolio__link {
-  margin-right: 0;
+  margin-left: 10px;
 }
 
 .footer {
