--- a/scss/components/_containers.scss
+++ b/scss/components/_containers.scss
@@ -124,16 +124,17 @@
 // }
 .image-container {
   background: linear-gradient(
-      rgba(0, 0, 0, 0.5),
-      rgba(0, 0, 0, 0.65)
+      rgba(0, 0, 0, 0.45),
+      rgba(0, 0, 0, 0.55)
     ), url('#{$path-img}stavanger.jpg') no-repeat;
-  background-attachment: fixed;
   background-position: center;
   background-size: cover;
   border-radius: 4px;
   color: $white;
-  padding: 5%;
   overflow: hidden;
+  @include mq(768px) {
+    padding: 2.5% 0;
+  }
 }
 
 .about-content {
