--- a/scss/components/_typography.scss
+++ b/scss/components/_typography.scss
@@ -68,7 +68,7 @@
   &__link {
     background: rgba($color-primary-lt, .85);
     color: $white;
-  	width: 47.99%;
+  	width: 46.99%;
     font-size: 1em;
   	font-weight: $font-weight-bold;
   	display: inline-block;
@@ -77,14 +77,17 @@
   	padding: 10px 0;
   	border: 2px solid $white;
   	border-radius: .5em;
-  	margin: 0 10px 0 0;
+  	margin: 0;
     margin-top: auto;
     transition: background .5s $transition-slow-end .2s;
+    @include mq(1150px) {
+      width: 47.99%
+    }
     &:hover {
       background: $color-primary;
     }
   }
   &__link + &__link {
-    margin-right: 0;
+    margin-left: 10px;
   }
 }
